--- a/demoapp/src/App.css
+++ b/demoapp/src/App.css
@@ -1,23 +1,20 @@
 
-.nav{
+.navbar{
   display: flex;
-  justify-content: space-around;
   background-color: rgb(37, 46, 49);
   color: white;
   height: 10vh;
 }
 
-.nav-links{
-  display: flex;
-  list-style: none;
-}
-
-.navStyle{
-  color: white;
-  list-style: none;
+.logo{
   margin-left: 2em;
+  margin-top: -.02em;
 }
 
-li{
-  list-style: none;
-}  
+.links{
+  display: flex;
+  justify-content: right;
+  color: white;
+  margin-left: 5em;
+  text-decoration: none;
+}
